// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI: ExtendedTextInput should match snapshot 1`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#ECECEC",
        },
        {
          "fontFamily": "SourceSans3-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        [
          {},
          {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    test input
  </Text>
  <TextInput
    onChangeText={[Function]}
    style={
      [
        {
          "borderBottomWidth": 1,
        },
        {
          "backgroundColor": "yellow",
        },
      ]
    }
    value="test input"
  />
  <Text
    style={
      [
        {
          "color": "#ECECEC",
        },
        {
          "fontFamily": "SourceSans3-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        [
          {},
          {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;

exports[`UI: ExtendedTextInput should match snapshot 2`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#ECECEC",
        },
        {
          "fontFamily": "SourceSans3-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        [
          {},
          {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    password toggle test input
  </Text>
  <View
    style={
      {
        "borderBottomWidth": 1,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      onChangeText={[Function]}
      secureTextEntry={true}
      style={
        [
          [
            {
              "borderBottomWidth": 1,
            },
            {
              "backgroundColor": "yellow",
            },
          ],
          {
            "borderBottomWidth": 0,
            "flex": 1,
          },
        ]
      }
      value="test input"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "red",
            "height": 15,
            "width": 15,
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      [
        {
          "color": "#ECECEC",
        },
        {
          "fontFamily": "SourceSans3-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        [
          {},
          {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;
